@@ -31,6 +31,8 @@ icon:check[] UI: The Gentics Mesh UI has been updated to version link:https://gi
 
 icon:check[] Core: The storage filesystem compatibility check has been made more reliable.
 
+icon:check[] Core: Fixed a bug that caused errors during microschema migrations in certain situations.
+
 [[v1.4.1]]
 == 1.4.1 (19.01.2020)
 
